--- a/src/css/order-form.css
+++ b/src/css/order-form.css
@@ -30,7 +30,7 @@ html
     height: 100%;
 
     /* presentation */
-    background-color: #F8FFF2;
+    background: url('../images/fond1.jpg') repeat;
 }
 
 h1
