--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,6 +89,12 @@ header
     text-align: right;
 }
 
+.bodyco
+{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .standard-table
 {
@@ -159,4 +165,10 @@ header
 {
     font-size: 20px;
     padding-top: 5Px;
+}
+
+.indextitle
+{
+    text-align: center;
+    padding-top: 20px;
 }
